--- a/src/main/resources/templates/Home/Index.html
+++ b/src/main/resources/templates/Home/Index.html
@@ -22,11 +22,10 @@
                 <div th:replace="Fragments/logout :: logout"></div>
                 <div class="container-fluid">
                     <div class="" id="dashboard">
-                        <h2>Dashboard</h2>
                         <th:block>
                             <div class="row">
 
-                                <div class="col-xl-3 col-md-6 mb-4">
+                                <div class="col mb-4">
                                     <div class="card border-left-info shadow h-100 py-2">
                                         <div class="card-body">
                                             <div class="row no-gutters align-items-center">
@@ -34,21 +33,18 @@
                                                     <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
                                                         Porcentagem de Alunos Avaliados</div>
                                                     <div class="row no-gutters align-items-center">
-                                                        <div class="col-auto">
-                                                            <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">
-                                                                <!-- <span th:text="${dados.porcentagemNaoAvaliados}"></span> -->
-                                                            </div>
-                                                        </div>
                                                         <div class="col">
-                                                            <div class="progress progress-sm mr-2">
-                                                                <div class="progress-bar bg-info" role="progressbar"
+                                                            <div class="progress progress-sm mr-2"
+                                                                style="height: 30px;">
+                                                                <div class="avaliados progress-bar bg-info"
+                                                                    role="progressbar" th:aria-valuenow="@{dados.}"
                                                                     aria-valuemin="0" aria-valuemax="100"></div>
                                                             </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
-                                                    <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                                                    <i class="fas fa-users fa-2x text-gray-300"></i>
                                                 </div>
                                             </div>
                                         </div>
@@ -56,66 +52,68 @@
                                 </div>
 
 
-                                <div class="col-xl-3 col-md-6 mb-4">
-                                    <div class="card border-left-success shadow h-100 py-2">
+                                <div class="col mb-4">
+                                    <div class="card border-left-info shadow h-100 py-2">
                                         <div class="card-body">
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col mr-2">
-                                                    <div
-                                                        class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                        Alunos Ativdado</div>
-                                                    <div class="h5 mb-0 font-weight-bold text-gray-800"><span></span>
-                                                    </div>
-                                                </div>
-                                                <div class="col-auto">
-                                                    <i class="fas fa-birthday-cake fa-2x text-gray-300"></i>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-xl-3 col-md-6 mb-4">
-                                    <div class="card border-left-success shadow h-100 py-2">
-                                        <div class="card-body">
-                                            <div class="row no-gutters align-items-center">
-                                                <div class="col mr-2">
-                                                    <div
-                                                        class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                        Sexo</div>
-                                                    <div class="h5 mb-0 font-weight-bold text-gray-800">
-
-
+                                                    <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                                        Porcentagem por Gênero</div>
+                                                    <div class="row no-gutters align-items-center">
+                                                        <div class="col">
+                                                            <div class="progress progress-sm mr-2"
+                                                                style="height: 30px;">
+                                                                <div class="homens progress-bar bg-primary"
+                                                                    role="progressbar" style="width: 15%"
+                                                                    aria-valuenow="15" aria-valuemin="0"
+                                                                    aria-valuemax="100"></div>
+                                                                <div class="mulheres progress-bar bg-warning"
+                                                                    role="progressbar" style="width: 30%"
+                                                                    aria-valuenow="30" aria-valuemin="0"
+                                                                    aria-valuemax="100"></div>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
                                                     <i class="fas fa-venus-mars fa-2x text-gray-300"></i>
-
-
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
 
-                                <div class="col-xl-3 col-md-6 mb-4">
-                                    <div class="card border-left-success shadow h-100 py-2">
+                                <div class="col mb-4">
+                                    <div class="card border-left-info shadow h-100 py-2">
                                         <div class="card-body">
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col mr-2">
-                                                    <div
-                                                        class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                                        Ultima Avaliação</div>
-                                                    <div class="h5 mb-0 font-weight-bold text-gray-800"><span></span>
+                                                    <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                                        Porcentagem de Ativados e Inativados</div>
+                                                    <div class="row no-gutters align-items-center">
+                                                        <div class="col">
+                                                            <div class="progress progress-sm mr-2"
+                                                                style="height: 30px;">
+                                                                <div class="ativados progress-bar bg-success"
+                                                                    role="progressbar" style="width: 15%"
+                                                                    aria-valuenow="15" aria-valuemin="0"
+                                                                    aria-valuemax="100"></div>
+                                                                <div class="inativados progress-bar bg-danger"
+                                                                    role="progressbar" style="width: 30%"
+                                                                    aria-valuenow="30" aria-valuemin="0"
+                                                                    aria-valuemax="100"></div>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-auto">
-                                                    <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                                    <i class="fas fa-user-slash fa-2x text-gray-300"></i>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
 
                         </th:block>
@@ -147,18 +145,39 @@
 <footer th:replace="Fragments/footer :: footer"></footer>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    var porcentagem = [[${ dados }]];
+    var dados = [[${ dados }]];
     var media = [[${ media }]];
     /*]]>*/
 </script>
 <script>
-    console.log(media.data)    
-    /*
-    $(".progress-bar").css("width", porcentagem.porcentagemNaoAvaliados)
+    console.log(dados)
+    $(".avaliados").text(dados.porcentagemDeAvaliados + '%')
+    $(".avaliados").css("width", dados.porcentagemDeAvaliados + '%')
+
+    var totalGenero = dados.qtdMasculino + dados.qtdFeminino;
+
+    var homensPorcentagem = parseFloat((dados.qtdMasculino / totalGenero) * 100).toFixed(2)
+    $(".homens").text(homensPorcentagem + '%')
+    $(".homens").css("width", homensPorcentagem + '%')
+
+    var mulheresPorcentagem = parseFloat((dados.qtdFeminino / totalGenero) * 100).toFixed(2)
+    $(".mulheres").text(mulheresPorcentagem + '%')
+    $(".mulheres").css("width", mulheresPorcentagem + '%')
+
+    var totalStatus = dados.qtdAtivados + dados.qtdInativados
+
+    var ativadosPorcentagem = parseFloat((dados.qtdAtivados / totalStatus) * 100).toFixed(2)
+    $(".ativados").text(ativadosPorcentagem + '%')
+    $(".ativados").css("width", ativadosPorcentagem + '%')
+
+    var inativadosPorcentagem = parseFloat((dados.qtdInativados / totalStatus) * 100).toFixed(2)
+    $(".inativados").text(inativadosPorcentagem + '%')
+    $(".inativados").css("width", inativadosPorcentagem + '%')
+
     $('#myModal').on('shown.bs.modal', function () {
         $('#myInput').trigger('focus')
     })
-    */
+
 </script>
 <script th:src="@{/js/Graficos/HomeGraficos.js}"></script>
 
