gráfico dashboard empresa

--- a/src/main/resources/templates/Home/Index.html
+++ b/src/main/resources/templates/Home/Index.html
@@ -132,6 +132,19 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div class="row">
+                            <div class="col">
+                                <div class="card shadow mb-4 col">
+                                    <div class="container-fluid">
+                                        <div class="card-header">
+                                            <center>MÉDIA DE IMC POR FAIXA HETÁRIA</center>
+                                        </div>
+                                        <div id="lineIMC" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
