--- a/src/main/resources/templates/Avaliacao/Avaliacao.html
+++ b/src/main/resources/templates/Avaliacao/Avaliacao.html
@@ -221,6 +221,8 @@
                                                     <span class="big" th:text="${avaliacoes[0].tricipital}"></span>
                                                 </div>
                                             </div>
+                                            </div>
+                                            <div class="row">
                                             <div class="col card bg-secondary text-white">
                                                 <div class="card-body">
                                                     <div class="text-white-50 small">BICIPTAL</div>
@@ -292,6 +294,8 @@
                                                     <span class="big" th:text="${avaliacoes[0].abdominal}"></span>
                                                 </div>
                                             </div>
+                                        </div>
+                                        <div class="row">
                                             <div class="col card bg-secondary text-white">
                                                 <div class="card-body">
                                                     <div class="text-white-50 small">CINTURA</div>
